--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   # For icons
   iconsax: ^0.0.8
   font_awesome_flutter: ^10.5.0
+  json_annotation: ^4.8.0
+  permission_handler: ^10.0.0
+  path_provider: ^2.0.0
 
 
 dev_dependencies:
@@ -61,6 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
