--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -52,8 +52,11 @@ dependencies:
   json_annotation: ^4.8.0
   path_provider: ^2.0.0
   permission_handler: ^12.0.0+1
-
+  cached_network_image: ^3.4.1
+  share_plus: ^11.0.0
+  flutter_html: ^3.0.0
   
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
