--- a/website-app/package.json
+++ b/website-app/package.json
@@ -3,14 +3,19 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "docker:build": "docker-compose build",
+        "docker:up": "docker-compose up -d",
+        "docker:down": "docker-compose down",
+        "docker:logs": "docker-compose logs -f",
+        "docker:init": "chmod +x docker-init.sh && ./docker-init.sh"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.0.11"
+        "@tailwindcss/forms": "^0.5.2",
+        "autoprefixer": "^10.4.7",
+        "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.0",
+        "vite": "^5.0"
     }
 }
