--- a/website-app/package.json
+++ b/website-app/package.json
@@ -19,6 +19,9 @@
         "docker:skip-build": "echo 'Skipping npm build in Docker'",
         "postinstall": "echo 'Dependencies installed successfully'"
     },
+    "dependencies": {
+        "axios": "^1.6.0"
+    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.7",
