--- a/website-app/package.json
+++ b/website-app/package.json
@@ -3,6 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build --outDir=public/build",
+        "build-skip": "echo 'Build skipped for Docker'",
         "dev": "vite",
         "docker:build": "docker-compose build",
         "docker:up": "docker-compose up -d",
@@ -17,7 +18,9 @@
         "docker:clean": "docker-compose down -v && docker system prune -f",
         "docker:status": "docker-compose ps",
         "docker:skip-build": "echo 'Skipping npm build in Docker'",
-        "postinstall": "echo 'Dependencies installed successfully'"
+        "postinstall": "echo 'Dependencies installed successfully'",
+        "check-deps": "npm list axios",
+        "install-axios": "npm install axios@^1.6.0"
     },
     "dependencies": {
         "axios": "^1.6.0"
