--- a/website-app/Dockerfile
+++ b/website-app/Dockerfile
@@ -28,25 +28,19 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Copy existing application directory contents
 COPY . /var/www/html
 
-# Copy existing application directory permissions
-COPY --chown=www-data:www-data . /var/www/html
-
 # Install PHP dependencies
 RUN composer install --optimize-autoloader --no-dev
 
 # Install Node.js dependencies and build assets
 RUN npm install && npm run build
 
-# Create Laravel directories if they don't exist and set permissions
-RUN mkdir -p storage/framework/sessions storage/framework/views storage/framework/cache \
+# Create Laravel directories and set proper ownership and permissions
+RUN mkdir -p storage/framework/sessions storage/framework/views storage/framework/cache storage/logs \
     && mkdir -p bootstrap/cache \
-    && chown -R www-data:www-data /var/www/html/storage \
-    && chown -R www-data:www-data /var/www/html/bootstrap/cache \
+    && chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html \
     && chmod -R 775 /var/www/html/storage \
     && chmod -R 775 /var/www/html/bootstrap/cache
-
-# Set permissions
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
