--- a/website-app/docker-compose.yml
+++ b/website-app/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PHP Service
   app:
@@ -16,8 +14,10 @@ services:
     networks:
       - puskesmas-network
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   # Nginx Service
   webserver:
@@ -40,10 +40,11 @@ services:
     container_name: puskesmas-db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_DATABASE: puskesmas_db
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_PASSWORD: user_password
+      MYSQL_USER: laravel_user
+      MYSQL_ALLOW_EMPTY_PASSWORD: "no"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/my.cnf
@@ -51,6 +52,10 @@ services:
       - "3306:3306"
     networks:
       - puskesmas-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   # Redis Service
   redis:
@@ -69,15 +74,16 @@ services:
       dockerfile: Dockerfile
     container_name: puskesmas-queue
     restart: unless-stopped
-    command: php artisan queue:work --verbose --tries=3 --timeout=90
+    command: sh -c "wait-for-it.sh db:3306 --timeout=60 --strict -- php artisan queue:work --verbose --tries=3 --timeout=90"
     volumes:
       - ./:/var/www/html
     networks:
       - puskesmas-network
     depends_on:
-      - app
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   # Scheduler
   scheduler:
@@ -86,14 +92,14 @@ services:
       dockerfile: Dockerfile
     container_name: puskesmas-scheduler
     restart: unless-stopped
-    command: php artisan schedule:run
+    command: sh -c "wait-for-it.sh db:3306 --timeout=60 --strict -- php artisan schedule:run"
     volumes:
       - ./:/var/www/html
     networks:
       - puskesmas-network
     depends_on:
-      - app
-      - db
+      db:
+        condition: service_healthy
 
 # Docker Networks
 networks:
