--- a/website-app/docker-compose.yml
+++ b/website-app/docker-compose.yml
@@ -75,6 +75,17 @@ services:
     container_name: puskesmas-queue
     restart: unless-stopped
     command: sh -c "wait-for-it.sh db:3306 --timeout=60 --strict -- php artisan queue:work --verbose --tries=3 --timeout=90"
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=puskesmas_db
+      - DB_USERNAME=laravel_user
+      - DB_PASSWORD=user_password
+      - CACHE_DRIVER=redis
+      - QUEUE_CONNECTION=redis
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     networks:
       - puskesmas-network
     depends_on:
@@ -91,6 +102,16 @@ services:
     container_name: puskesmas-scheduler
     restart: unless-stopped
     command: sh -c "wait-for-it.sh db:3306 --timeout=60 --strict -- php artisan schedule:run"
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=puskesmas_db
+      - DB_USERNAME=laravel_user
+      - DB_PASSWORD=user_password
+      - CACHE_DRIVER=redis
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     networks:
       - puskesmas-network
     depends_on:
