--- a/website-app/docker-compose.yml
+++ b/website-app/docker-compose.yml
@@ -67,6 +67,31 @@ services:
     networks:
       - puskesmas-network
 
+  # Laravel Initialization
+  init:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: puskesmas-init
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=puskesmas_db
+      - DB_USERNAME=laravel_user
+      - DB_PASSWORD=user_password
+      - CACHE_DRIVER=redis
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    command: sh -c "wait-for-it.sh db:3306 --timeout=60 --strict -- php artisan migrate --force && php artisan cache:table && php artisan migrate --force"
+    networks:
+      - puskesmas-network
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
   # Queue Worker
   queue:
     build:
@@ -93,6 +118,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      init:
+        condition: service_completed_successfully
 
   # Scheduler
   scheduler:
@@ -117,6 +144,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      init:
+        condition: service_completed_successfully
 
 # Docker Networks
 networks:
