--- a/website-app/docker-compose.yml
+++ b/website-app/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      init:
+        condition: service_completed_successfully
 
   # Nginx Service
   webserver:
