--- a/website-app/docker-compose.yml
+++ b/website-app/docker-compose.yml
@@ -1,47 +1,68 @@
 version: '3.8'
 
 services:
+  # PHP Service
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    container_name: laravel_app
+    restart: unless-stopped
+    working_dir: /var/www/html
+    volumes:
+      - ./:/var/www/html
+      - ./docker/apache/000-default.conf:/etc/apache2/sites-available/000-default.conf
     ports:
       - "80:80"
-    volumes:
-      - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
+    networks:
+      - laravel
+    depends_on:
+      - db
     environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
-      - APP_URL=http://localhost
-      - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
-      - DB_DATABASE=fixpa2
-      - DB_USERNAME=root
-      - DB_PASSWORD=rootpassword
+      - DB_DATABASE=laravel
+      - DB_USERNAME=laravel
+      - DB_PASSWORD=secret
+
+  # MySQL Database Service
+  db:
+    image: mysql:8.0
+    container_name: laravel_db
+    restart: unless-stopped
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: laravel
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: secret
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - laravel
+
+  # phpMyAdmin Service
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: laravel_phpmyadmin
+    restart: unless-stopped
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
     depends_on:
       - db
     networks:
       - laravel
 
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_DATABASE: fixpa2
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_PASSWORD: rootpassword
-      MYSQL_USER: laravel
-    volumes:
-      - mysql_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
-    networks:
-      - laravel
-
-volumes:
-  mysql_data:
-
+# Docker Networks
 networks:
   laravel:
     driver: bridge
+
+# Volumes
+volumes:
+  dbdata:
+    driver: local
