--- a/website-app/.dockerignore
+++ b/website-app/.dockerignore
@@ -8,7 +8,7 @@ Dockerfile
 .dockerignore
 docker-compose.yml
 /node_modules
-/vendor
+# /vendor - commented out to ensure composer dependencies are available
 .phpunit.cache
 /storage/logs
 /storage/framework/cache
